// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deserialize a link and a content-link in an list 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": " ",
                  },
                ],
                "object": "text",
              },
              Object {
                "data": Object {
                  "content-id": "504",
                  "link-text": "Yrker i mediebransjen",
                  "resource": "content-link",
                },
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "Yrker i mediebransjen",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "inline",
                "type": "link",
              },
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": " ",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": " ",
                  },
                ],
                "object": "text",
              },
              Object {
                "data": Object {
                  "href": "https://www.nrk.no/skole/?page=search&q=Jobb%20i%20NRK",
                  "rel": "noopener noreferrer",
                  "target": "_blank",
                  "title": "Yrker i NRK",
                },
                "nodes": Array [
                  Object {
                    "leaves": Array [
                      Object {
                        "marks": Array [],
                        "object": "leaf",
                        "text": "Yrker i NRK",
                      },
                    ],
                    "object": "text",
                  },
                ],
                "object": "inline",
                "type": "link",
              },
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": " ",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "block",
            "type": "list-item",
          },
        ],
        "object": "block",
        "type": "bulleted-list",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`deserialize link with spacing before link 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "nodes": Array [
      Object {
        "data": Object {},
        "nodes": Array [
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": "Eller du kan bruke nettsidene ",
              },
            ],
            "object": "text",
          },
          Object {
            "data": Object {
              "href": "http://www.nav.no/",
              "rel": "noopener noreferrer",
              "target": "_blank",
              "title": "nav.no",
            },
            "nodes": Array [
              Object {
                "leaves": Array [
                  Object {
                    "marks": Array [],
                    "object": "leaf",
                    "text": "nav.no",
                  },
                ],
                "object": "text",
              },
            ],
            "object": "inline",
            "type": "link",
          },
          Object {
            "leaves": Array [
              Object {
                "marks": Array [],
                "object": "leaf",
                "text": " . Her finnes informasjon om de ulike tjenestene.",
              },
            ],
            "object": "text",
          },
        ],
        "object": "block",
        "type": "paragraph",
      },
    ],
    "object": "document",
  },
  "object": "value",
}
`;

exports[`serialize list with a link and text 1`] = `
<ul>
  <li>
    A string of 
    <strong>
      bold
    </strong>
     in a 
    <a
      href="http://slatejs.org"
      rel="noopener noreferrer"
      target="_blank"
    >
      Slate
    </a>
     editor!
  </li>
  <li>
    A string of 
    <strong>
      bold
    </strong>
     in a editor!
  </li>
</ul>
`;
